[project]
name = "imagediff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "platinum1154", email = "platinum1154@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
imagediff = "imagediff:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
